--- a/public/css/admstyles.css
+++ b/public/css/admstyles.css
@@ -48,3 +48,11 @@ strong {font-weight:bold;}
 .button {padding:3px 7px; background-color: rgba(153,255,153,0.5); border-radius:7px; font-size:75%;}
 .button:hover {background-color:rgba(153,255,153,1); text-decoration:none;}
 .view_mailing {border:solid 1px #999999; background-color:rgba(252,235,209,0.3); padding:10px; margin-bottom:20px;}
+
+p.logout_link {
+	color: #999;
+	font-size: 12px;
+	border-bottom: solid 1px #999;
+	margin-bottom: 20px;
+	padding-bottom: 20px;
+}
