--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,3 +110,8 @@ body {
     font-size: 16px;
     color: #E31E24;
 }
+
+.product-page_category-ico {
+    float: left;
+    padding: 0 10px 10px 0;
+}
