--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,28 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline;}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {display: block;}
+body {line-height: 1;}
+ol, ul, li {list-style: none;}
+blockquote, q {quotes: none;}
+blockquote:before, blockquote:after,
+q:before, q:after {content: '';content: none;}
+table {border-collapse: collapse; border-spacing: 0;}
+
+
+
 body {
 	background-color: #010101;
     background-image: url(/img/site_img/fon_concert.jpg);
@@ -7,6 +32,10 @@ body {
     background-size: 100%;
     color: #333;
     font-size: 16px;
+    font-family: 'Trebuchet MS', 'Lucida Grande', Verdana, Arial, Sans-Serif;
+}
+strong {
+    font-weight: bold;
 }
 
 
@@ -36,15 +65,15 @@ body {
     border: 10px solid rgba(227, 30, 36, .1);
     background-color: rgba(255, 255, 255, 0.8);
     padding: 10px 1.5%;
-    margin-bottom: 20px;
+    margin-top: 15px;
 }
 .text-area h1 {
     font-family: Georgia, "Times New Roman", Times, serif;
     color: #444;
-    text-align: center;
-    padding-bottom: 10px;
+    padding: 5px 5px 15px;
     border-bottom: dashed 1px #E31E24;
     font-size: 36px;
+    margin-right: 270px;
 }
 .text-area h2 {
     font-family: Georgia, "Times New Roman", Times, serif;
@@ -54,6 +83,14 @@ body {
 }
 .text-area h2 a {
     color: #E31E24;
+}
+.text-area p {
+    line-height: 1.4;
+    text-align: justify;
+    margin-bottom: 10px;
+}
+.text-area p:last-child {
+    margin-bottom: 0;
 }
 .color-text {
     color: #E31E24;
@@ -113,5 +150,281 @@ body {
 
 .product-page_category-ico {
     float: left;
+    width: 50px;
+    margin-right: 10px;
+}
+
+
+.product-page_show-product-block {
+    display: flex;
+    flex-wrap: wrap;
+}
+.product-page_show-product-element {
+    flex: 0 0 32.33%;
+    box-sizing: border-box;
+    background-color: #FFF;
+    padding: 10px 10px 50px;
+    box-shadow: 1px 1px 10px 0px #666;
+    margin: 0 1.5% 10px 0;
+    position: relative;
+}
+.product-page_show-product-element:nth-child(3n) {
+    margin-right: 0px;
+}
+.product-page_show-product-element p {
+    font-size: 16px;
+    text-align: left;
+    line-height: 1.2;
+}
+.product-page_show-product_pic {
+    float: left;
     padding: 0 10px 10px 0;
 }
+.product-page_show-product_pic img {
+    display:block;
+    height: 100px;
+    transition: all 0.1s ease-out;
+}
+.product-page_show-product_pic img:hover {
+    transform: scale(1.1);
+}
+.product-page_show-product_name {
+    font-weight: bold;
+    font-size: 1.2em;
+    margin-bottom: 20px;
+    line-height: 1;
+}
+.product-page_show-product_name a {
+    color: #E31E24;
+}
+.product-page_show-product_price p {
+    margin-bottom: 10px;
+}
+.product-page_show-product_info2 {
+    clear: left;
+    margin-bottom: 10px;
+    min-height: 76px;
+}
+.product-page_show-product_info3 {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 0 10px 10px;
+}
+.product-page_show-product_more-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 140px;
+    background-color: #E31E24;
+    text-transform: uppercase;
+    transition: all .4s;
+}
+.product-page_show-product_more-info a {
+    color: #fff;
+    padding: 9px;
+    transition: color .4s;
+}
+.product-page_show-product_more-info:hover {
+    background-color: #000;
+}
+.product-page_show-product_more-info a:hover {
+    text-decoration: none;
+    color: #E31E24;
+}
+.product-page_show-product_to-cart {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 140px;
+    background-color: green;
+    text-transform: uppercase;
+    transition: all .4s;
+}
+.product-page_show-product_to-cart a {
+    color: #fff;
+    padding: 9px;
+    transition: all .4s;
+}
+.product-page_show-product_to-cart:hover {
+    background-color: #000;
+}
+.product-page_show-product_to-cart a:hover {
+    text-decoration: none;
+    color: #E31E24;
+}
+.product-page_show-product_to-order {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 140px;
+    background-color: blue;
+    text-transform: uppercase;
+    transition: all .4s;
+}
+.product-page_show-product_to-order i {
+    color: #fff;
+    transition: all .4s;
+}
+.product-page_show-product_to-order:hover i {
+    color: #E31E24;
+}
+.product-page_show-product_to-order a {
+    color: #fff;
+    padding-left: 5px;
+    transition: all .4s;
+    line-height: 1.1;
+}
+.product-page_show-product_to-order:hover {
+    background-color: #000;
+}
+.product-page_show-product_to-order a:hover {
+    text-decoration: none;
+    color: #E31E24;
+}
+.product-page_show-product_to-order .order_rem {
+    font-size: 65%;
+}
+
+.big-text {
+    font-size: 1.3em;
+    font-weight: bold;
+}
+.product-page_show-product_paginator nav {
+    text-align: center;
+}
+
+
+
+.main-content_katalog {
+    width: 250px;
+    float: right;
+    margin: 10px 0 10px 20px;
+    background-color: rgba(1,1,1,0.8);
+    box-shadow: 1px 1px 10px 0px #666;
+}
+.main-content_katalog a {
+    color: #FFFFFF;
+}
+.main-content_name-menu {
+    background-color: #E31E24;
+    padding: 5px;
+    font-size: 20px;
+    background-color: #E31E24;
+    text-align: center;
+}
+.main-content_category-tree {
+    padding: 5px;
+}
+.main-content_category-tree li {
+    padding: 5px 0;
+    border-top: dashed 1px #CCCCCC;
+}
+.main-content_category-tree li:first-child {
+    border-top: none;
+}
+.main-content_category-tree li a {
+    font-weight: normal;
+    font-size: 18px;
+}
+li.main-content_category-tree_child a {
+    font-size: 16px;
+    font-weight: normal;
+}
+li.main-content_category-tree_child {padding: 3px 5px 3px 15px; border-top:none;}
+.selected.main-content_category-tree_child {
+    background-color: rgba(255,255,255,0.9);
+}
+.selected.main-content_category-tree_child a {
+    color:#E31E24;
+}
+.main-content_category-tree_main-cat {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+.main-content_category-tree_main-cat a:last-child {
+    padding-left: 15px;
+}
+
+.shopping-cart_block {
+    clear: both;
+    padding-top: 15px;
+}
+.shopping-cart table {
+    width: 100%;
+    font-weight: bold;
+}
+.shopping-cart_title {
+    display: flex;
+    background-color: rgba(1,1,1,0.8);
+    color:#FFFFFF;
+    font-weight: normal;
+}
+.shopping-cart_title td {
+    padding: 15px 5px;
+}
+.shopping-cart_goods {
+    display: flex;
+    align-items: center;
+    border-bottom: solid 1px rgba(1,1,1,0.7);
+    width: 100%;
+}
+.shopping-cart_product-name {
+    display: flex;
+    align-items: center;
+    flex: 0 0 845px;
+}
+.shopping-cart_product-name div img {
+    display: block;
+    width: 100px;
+    padding: 10px 15px 10px 0;
+}
+.shopping-cart_del-but {
+    flex: 0 0 30px;
+}
+
+.shopping-cart_price {
+    flex: 0 0 100px;
+    text-align: right;
+}
+.shopping-cart_kol {
+    flex: 0 0 110px;
+}
+.shopping-cart_kol input[type="submit"] {
+    background-color: rgba(1,1,1,0.8);
+    font-size: 12px;
+    padding: 10px;
+    margin-top: 10px;
+    font-weight: normal;
+}
+.shopping-cart_kol input[type="submit"]:hover {
+    text-decoration: underline;
+}
+
+.shopping-cart_total {
+    display: flex;
+    font-size: 18px;
+}
+.shopping-cart_total td {
+    padding: 15px 0;
+}
+
+
+.shopping-cart_update {text-align:center; margin-left:240px;}
+.shopping-cart_update button {padding:5px 10px; background-color: rgba(0,89,0,0.7); border:none; border-radius:15px; color:#FFFFFF; text-transform:uppercase; font-weight:bold; outline:none;}
+.shopping-cart_update button:hover {background-color:rgba(0,89,0,1); cursor:pointer;}
+
+.shopping-cart_complete-order {margin:20px 0 0 240px; text-align:right;}
+.shopping-cart_complete-order a {padding:5px 10px; background-color:rgba(227,30,36,0.7); border-radius:15px; color:#FFFFFF; text-transform:uppercase; font-weight:bold;}
+.shopping-cart_complete-order a:hover {background-color:rgba(227,30,36,1); cursor:pointer; text-decoration:none;}
+
+.shopping-cart_error {text-align:center; font-weight:bold; color:red;}
+
+.shopping-cart_clear {padding:10px; text-align:center; text-transform:uppercase; font-size:1.1em;}
+.shopping-cart_clear button {padding:5px; background-color:rgba(1,1,1,0.5); border:none; border-radius:15px; color:#FFFFFF; text-transform:uppercase; font-weight:bold; outline:none;}
+.shopping-cart_clear button:hover {background-color:rgba(1,1,1,0.8); cursor:pointer;}
+.shopping-cart_clear img {padding-right:5px; margin-bottom:-2px;}
